--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: minimal-mistakes-jekyll
 title: ["Par où commencer ?"]
 description: ["Une petite descritption de l'objectif de ce site"]
+logo: [Location of the logo]
 
