--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: ["Par où commencer ?"]
 description: ["Une petite descritption de l'objectif de ce site"]
-logo: [https://github.com/paroucommencer/paroucommencer.github.io/blob/main/the-question-mark-350170_1280.png]
+logo: [https://paroucommencer.github.io/the-question-mark-350170_1280.png]
 
