--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: ["Par où commencer ?"]
-description: ["Une petite descritption de l'objectif de ce site"]
+title: "Par où commencer ?"
+description: "Une petite descritption de l'objectif de ce site"
 
 
