--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 title: "Par où commencer ?"
 description: "Une petite descritption de l'objectif de ce site"
 logo: /the-question-mark-350170_1280.png
